05_ponteiros/pont_14/Resultados/DaviSalles/completo/result_compilation.txt
tela.c: In function ‘OuvidorEventosTela’:
tela.c:67:35: error: expected ‘;’ before ‘scanf’
   67 |     printf("- Escolha sua acao: ")
      |                                   ^
      |                                   ;
   68 |     scanf("%d", &num);
      |     ~~~~~                          
